...
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            android:textStyle="bold" />


...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteSymbol"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/clearEntry"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/ce"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/clear"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/c"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/changeSymbol"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/plusminus"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/squareRoot"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/root"
...
                android:layout_weight="1"
                android:text="@string/_9"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/divide"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/_4"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/_5"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/_6"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/multiply"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/_1"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                    <Button
                        android:id="@+id/_2"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/_2"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                    <Button
                        android:id="@+id/_3"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/_3"
...

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/equal"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="71dp"
                android:layout_height="155dp"
                android:layout_gravity="top|center_horizontal"
                android:text="@string/equal"
                android:textColor="@color/black"
...
