...
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m_plus">M+</string>
    <string name="m_minus">M-</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plusminus">+-</string>
    <string name="root">√</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
...
